test/spec_vectors/simd_load_splat/fail/module_13.wat
(module (memory 0) (func $v128.load64_splat-arg-empty (result v128) (v128.load64_splat)))